# anolis-provider-bread

./: .clang-tidy  .gitignore  .gitmodules  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  TODO.md  justfile  tsan.supp  valgrind.supp  vcpkg-configuration.json  vcpkg.json  version-locations.txt
.github/workflows/: ci.yml  clang-tidy.yml  dependency-scan.yml  hardening.yml  metrics.yml  release.yml
cmake/: Warnings.cmake
config/: ci.test.yaml  conformance.toml  conformance.yaml  example.local.yaml
docs/: Doxyfile  README.md  build.md  index.md  troubleshooting.md  versioning.md
scripts/: README.md  build.ps1  build.sh  test.ps1  test.sh
src/config/: provider_config.cpp  provider_config.hpp
src/core/: README.md  bread_provider_runtime.cpp  bread_provider_runtime.hpp  handlers.cpp  handlers.hpp  health.cpp  health.hpp  main.cpp  runtime_state.cpp  runtime_state.hpp  startup.cpp  startup.hpp
src/core/transport/: framed_stdio.cpp  framed_stdio.hpp
src/crumbs/: README.md  crumbs_canned_bus.cpp  crumbs_canned_bus.hpp  crumbs_transport.cpp  crumbs_transport.hpp  linux_transport.cpp  linux_transport.hpp  mock_transport.cpp  mock_transport.hpp  session.cpp  session.hpp
src/devices/: README.md
src/devices/common/: adapter_helpers.hpp  bread_compatibility.cpp  bread_compatibility.hpp  device_adapter.cpp  device_adapter.hpp  device_type.hpp  inventory.cpp  inventory.hpp  watchdog.cpp  watchdog.hpp
src/devices/dcmt/: dcmt_adapter.cpp  dcmt_adapter.hpp
src/devices/rlht/: rlht_adapter.cpp  rlht_adapter.hpp
src/logging/: logger.cpp  logger.hpp
tests/: .clang-tidy
tests/unit/: CMakeLists.txt  bread_inventory_test.cpp  bread_provider_runtime_test.cpp  crumbs_canned_bus_test.cpp  crumbs_session_test.cpp  crumbs_transport_test.cpp  dcmt_adapter_test.cpp  handlers_test.cpp  health_test.cpp  inventory_test.cpp  linux_transport_test.cpp  proto_smoke_test.cpp  provider_config_test.cpp  rlht_adapter_test.cpp  shell_test.cpp  startup_discovery_test.cpp  watchdog_test.cpp
